# crack24

./: LICENSE  README.md  crack24.install  crack24.opam  dune-project  main.ml  main.py  solver.ml
dune.lock/: lock.dune  ocaml-compiler.pkg
lib/: algo.ml  dune  ratnum.ml  solver.ml
test/: dune
