(lang dune 3.17)

(name crack24)

(generate_opam_files true)

(source
 (github ccyah/crack24))

(authors "ccy <ccccy 096@gmail.com>")

(license MIT)

; (documentation https://url/to/documentation)

(package
 (name crack24)
 (synopsis "24 game cracker")
 (depends ocaml)
 )

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
